Fix contrast issue on lang disabled link

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -86,13 +86,14 @@ header {
   a {
     border: none;
     padding: 0 4px;
-    opacity: 0.4;
+    opacity: 0.6;
     cursor: pointer;
-    font-family: "open_sanssemibold";
+    font-family: "open_sansregular";
     color: black;
     &.currentLang{
       opacity: 1;
       cursor: default;
+      font-family: "open_sanssemibold";
     }
   }
 }
